# funkbox-display

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  broadcast_socket.c  broadcast_socket.h  code_monospace_30.c  command_display.c  command_display.h  data.c  data.h  event_display.c  event_display.h  lv_immono_20.c  lv_immono_28.c  lv_immono_38.c  lv_immono_40.c  lv_immono_48.c  lv_immono_bold_64.c  lv_immono_bold_80.c  lvgl_ui.c  lvgl_ui.h  main.c  pitstop_display.c  pitstop_display.h  ui_commons.c  ui_commons.h  wlan.c  wlan.h
main/proto/: message.pb-c.c  message.pb-c.h
