idf_component_register(SRCS "command_display.c" "lv_immono_bold_64.c" "lv_immono_bold_80.c" "ui_commons.c" "event_display.c" "notifications.c" "lv_immono_40.c" "lv_immono_38.c" "lv_immono_28.c" "lv_immono_20.c" "lv_immono_48.c" "data.c" "broadcast_socket.c" "wlan.c" "main.c" "lvgl_ui.c"
                       INCLUDE_DIRS ".")
